bf nf Custom gene set scores format naming consistency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -6,6 +6,8 @@ export(AddGOGeneList.manual)
 export(AddGOScore)
 export(CalcTranscriptomePercentage)
 export(CalcTranscriptomePercentageGO)
+export(CleanDuplicateScorenames)
+export(CustomScoreEvaluation)
 export(FeaturePlotSaveCustomScore)
 export(FeaturePlotSaveGO)
 export(FilterStressedCells)
@@ -17,14 +19,14 @@ export(GetNamedClusteringRuns)
 export(IntersectWithExpressed)
 export(PasteUniqueGeneList)
 export(PlotGoTermScores)
+export(PlotNormAndSkew)
 export(Shiny.GO.thresh)
 export(UMAP.3d.cubes)
 export(aut.res.clustering)
-export(calc.cluster.averages.new)
+export(calc.cluster.averages.gruffi)
 export(clUMAP.thresholding)
-export(clean.duplicate.scorenames)
+export(custom_score_evaluation)
 export(fix.metad.Colname.rm.trailing.1)
-export(plot_norm_and_skew)
 export(reassign.small.clusters)
 export(saveData)
 export(saveRDS.compress.in.BG)
