--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,6 @@
 Package: gruffi
-Title: gruffi is the fastest way to create, annotate and export plots in R
+Title: Gruffi identifies and removes stressed cells from brain organoid
+    single-cell datasets.
 Version: 0.7.0
 Authors@R: 
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
@@ -47,6 +48,6 @@ Imports:
     tidyverse,
     viridis
 Encoding: UTF-8
-Packaged: 2022-03-30 16:29:07
+Packaged: 2022-03-30 16:33:36
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.1.2
