--- a/NAMESPACE
+++ b/NAMESPACE
@@ -20,6 +20,7 @@ export(PasteUniqueGeneList)
 export(PlotGoTermScores)
 export(PlotNormAndSkew)
 export(Shiny.GO.thresh)
+export(Auto.GO.thresh)
 export(UMAP.3d.cubes)
 export(aut.res.clustering)
 export(calc.cluster.averages.gruffi)
