Dependent func moved

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -41,6 +41,7 @@ importFrom(IRanges,gsub)
 importFrom(MarkdownHelpers,filter_HP)
 importFrom(MarkdownHelpers,llprint)
 importFrom(MarkdownHelpers,stopif)
+importFrom(MarkdownHelpers,ww.FnP_parser)
 importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
 importFrom(Seurat,AddModuleScore)
@@ -56,7 +57,6 @@ importFrom(Seurat,RunUMAP)
 importFrom(Seurat.utils,calc.cluster.averages)
 importFrom(Stringendo,iprint)
 importFrom(Stringendo,percentage_formatter)
-importFrom(Stringendo,ww.FnP_parser)
 importFrom(biomaRt,getBM)
 importFrom(biomaRt,useEnsembl)
 importFrom(clipr,read_clip)
