--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,7 +13,6 @@ export(FilterStressedCells)
 export(GO_score_evaluation)
 export(GetAllGOTerms)
 export(GetGOTerms)
-export(GetNamedClusteringRuns)
 export(IntersectWithExpressed)
 export(PasteUniqueGeneList)
 export(PlotGoTermScores)
@@ -22,27 +21,24 @@ export(Shiny.GO.thresh)
 export(UMAP.3d.cubes)
 export(aut.res.clustering)
 export(calc.cluster.averages.gruffi)
+export(calculateMedianClusterSize)
 export(clUMAP.thresholding)
-export(fix.metad.Colname.rm.trailing.1)
+export(grScoreHistogram)
+export(grScoreUMAP)
 export(plot.clust.size.distr)
 export(reassign.small.clusters)
-export(saveData)
-export(saveRDS.compress.in.BG)
-export(sparse.cor)
 export(stand_dev_skewed)
-export(ww.convert.GO_term.2.score)
-export(ww.convert.score.2.GO_term)
 importFrom(AnnotationDbi,Term)
 importFrom(AnnotationDbi,select)
+importFrom(CodeAndRoll2,as.numeric.wNames.character)
 importFrom(CodeAndRoll2,grepv)
+importFrom(CodeAndRoll2,matrix.fromNames)
 importFrom(CodeAndRoll2,sem)
 importFrom(CodeAndRoll2,sortbyitsnames)
-importFrom(IRanges,gsub)
+importFrom(CodeAndRoll2,which_names)
 importFrom(MarkdownHelpers,filter_HP)
 importFrom(MarkdownHelpers,llprint)
-importFrom(MarkdownHelpers,stopif)
 importFrom(MarkdownHelpers,ww.FnP_parser)
-importFrom(Matrix,colMeans)
 importFrom(Matrix,colSums)
 importFrom(Seurat,AddModuleScore)
 importFrom(Seurat,Cells)
@@ -55,6 +51,7 @@ importFrom(Seurat,RenameIdents)
 importFrom(Seurat,RunTSNE)
 importFrom(Seurat,RunUMAP)
 importFrom(Seurat.utils,calc.cluster.averages)
+importFrom(Seurat.utils,clUMAP)
 importFrom(Stringendo,iprint)
 importFrom(Stringendo,percentage_formatter)
 importFrom(biomaRt,getBM)
@@ -68,6 +65,7 @@ importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
 importFrom(ggExpress,qbarplot)
 importFrom(ggExpress,qhistogram)
+importFrom(ggExpress,qscatter)
 importFrom(ggplot2,labs)
 importFrom(htmlwidgets,saveWidget)
 importFrom(org.Hs.eg.db,org.Hs.eg.db)
