--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,8 +52,11 @@ importFrom(Seurat,RunTSNE)
 importFrom(Seurat,RunUMAP)
 importFrom(Seurat.utils,calc.cluster.averages)
 importFrom(Seurat.utils,clUMAP)
+importFrom(Seurat.utils,isave.RDS)
+importFrom(Seurat.utils,multiFeaturePlot.A4)
 importFrom(Stringendo,iprint)
 importFrom(Stringendo,percentage_formatter)
+importFrom(Stringendo,ppp)
 importFrom(biomaRt,getBM)
 importFrom(biomaRt,useEnsembl)
 importFrom(clipr,read_clip)
@@ -63,6 +66,8 @@ importFrom(dplyr,n)
 importFrom(dplyr,select_at)
 importFrom(dplyr,summarize)
 importFrom(dplyr,tibble)
+importFrom(future,nbrOfWorkers)
+importFrom(future,plan)
 importFrom(ggExpress,qbarplot)
 importFrom(ggExpress,qhistogram)
 importFrom(ggExpress,qscatter)
