--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,11 +1,11 @@
 Package: gruffi
 Title: Gruffi identifies and removes stressed cells from brain organoid
     single-cell datasets.
-Version: 1.1.5
+Version: 1.2.2
 Authors@R:
     person("First", "Last", , "first.last@example.com", role = c("aut", "cre"),
            comment = c(ORCID = "YOUR-ORCID-ID"))
-Author: Julia Naas <julia.naas@meduniwien.ac.at> [aut, cre]; Abel Vertesy
+Author: Julia Naas <julia.naas@meduniwien.ac.at> [aut, cre]Abel Vertesy
     <abel.vertesy@imba.oeaw.ac.at> [aut, cre]
 Description: The Gruffi R package helps you (1) to identify stressed cells
     in single-cell RNA-seq datasets using *granular funcitonal filtering*,
@@ -44,6 +44,7 @@ Imports:
     tictoc,
     viridis
 Encoding: UTF-8
-Packaged: 2024-02-13 18:54:21.557626
+Encoding: UTF-8
+Packaged: 2024-02-14 14:46:35.982938
 Roxygen: list(markdown = TRUE)
 RoxygenNote: 7.2.3
