On #12 Ensembl mirror argument added

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -73,6 +73,7 @@ importFrom(ggExpress,qbarplot)
 importFrom(ggExpress,qhistogram)
 importFrom(ggExpress,qscatter)
 importFrom(ggplot2,labs)
+importFrom(gtools,mixedsort)
 importFrom(htmlwidgets,saveWidget)
 importFrom(org.Hs.eg.db,org.Hs.eg.db)
 importFrom(raster,modal)
