--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,7 +12,7 @@ export(FeaturePlotSaveCustomScore)
 export(FeaturePlotSaveGO)
 export(FilterStressedCells)
 export(GO_score_evaluation)
-export(GetAllGOTerms)
+export(GetAllGOTermNames)
 export(GetGOTerms)
 export(IntersectWithExpressed)
 export(PasteUniqueGeneList)
@@ -24,6 +24,7 @@ export(aut.res.clustering)
 export(calc.cluster.averages.gruffi)
 export(calculateMedianClusterSize)
 export(clUMAP.thresholding)
+export(getGruffiClusteringName)
 export(grScoreHistogram)
 export(grScoreUMAP)
 export(plot.clust.size.distr)
@@ -45,7 +46,6 @@ importFrom(Seurat,AddModuleScore)
 importFrom(Seurat,Cells)
 importFrom(Seurat,DefaultAssay)
 importFrom(Seurat,FeaturePlot)
-importFrom(Seurat,FindClusters)
 importFrom(Seurat,GetAssayData)
 importFrom(Seurat,Idents)
 importFrom(Seurat,RenameIdents)
