Refactoring for consistency

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,32 +4,31 @@ export(AddCustomScore)
 export(AddGOGeneList.manual)
 export(AddGOScore)
 export(Auto.GO.thresh)
+export(AutoFindGranuleResolution)
+export(CalcClusterAverages_Gruffi)
+export(CalcStandDevSkewedDistr)
 export(CalcTranscriptomePercentage)
 export(CalcTranscriptomePercentageGO)
+export(CalculateMedianClusterSize)
 export(CleanDuplicateScorenames)
+export(ClusterUMAPthresholding)
 export(CustomScoreEvaluation)
 export(FeaturePlotSaveCustomScore)
 export(FeaturePlotSaveGO)
 export(FilterStressedCells)
-export(GO_score_evaluation)
+export(GOscoreEvaluation)
 export(GetAllGOTermNames)
 export(GetGOTerms)
+export(GetGruffiClusteringName)
+export(GrScoreHistogram)
+export(GrScoreUMAP)
 export(IntersectWithExpressed)
-export(PasteUniqueGeneList)
+export(PlotClustSizeDistr)
 export(PlotGoTermScores)
 export(PlotNormAndSkew)
+export(ReassignSmallClusters)
 export(Shiny.GO.thresh)
-export(UMAP.3d.cubes)
-export(aut.res.clustering)
-export(calc.cluster.averages.gruffi)
-export(calculateMedianClusterSize)
-export(clUMAP.thresholding)
-export(getGruffiClusteringName)
-export(grScoreHistogram)
-export(grScoreUMAP)
-export(plot.clust.size.distr)
-export(reassign.small.clusters)
-export(stand_dev_skewed)
+export(UMAP3Dcubes)
 importFrom(AnnotationDbi,Term)
 importFrom(AnnotationDbi,select)
 importFrom(CodeAndRoll2,as.numeric.wNames.character)
@@ -60,7 +59,6 @@ importFrom(Stringendo,percentage_formatter)
 importFrom(Stringendo,ppp)
 importFrom(biomaRt,getBM)
 importFrom(biomaRt,useEnsembl)
-importFrom(clipr,read_clip)
 importFrom(cowplot,save_plot)
 importFrom(dplyr,group_by_at)
 importFrom(dplyr,n)
