Major (breaking) consistency upgrade in misc data handling and function naming.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,7 @@
 export(AddCustomScore)
 export(AddGOGeneList.manual)
 export(AddGOScore)
+export(AssignGranuleAverageScoresFromGOterm)
 export(Auto.GO.thresh)
 export(AutoFindGranuleResolution)
 export(CalcClusterAverages_Gruffi)
@@ -16,7 +17,6 @@ export(CustomScoreEvaluation)
 export(FeaturePlotSaveCustomScore)
 export(FeaturePlotSaveGO)
 export(FilterStressedCells)
-export(GOscoreEvaluation)
 export(GetAllGOTermNames)
 export(GetGOTerms)
 export(GetGruffiClusteringName)
@@ -37,6 +37,7 @@ importFrom(CodeAndRoll2,matrix.fromNames)
 importFrom(CodeAndRoll2,sem)
 importFrom(CodeAndRoll2,sortbyitsnames)
 importFrom(CodeAndRoll2,which_names)
+importFrom(DOSE,geneInCategory)
 importFrom(MarkdownHelpers,filter_HP)
 importFrom(MarkdownHelpers,llprint)
 importFrom(MarkdownHelpers,ww.FnP_parser)
@@ -55,6 +56,7 @@ importFrom(Seurat.utils,clUMAP)
 importFrom(Seurat.utils,isave.RDS)
 importFrom(Seurat.utils,multiFeaturePlot.A4)
 importFrom(Stringendo,iprint)
+importFrom(Stringendo,kollapse)
 importFrom(Stringendo,percentage_formatter)
 importFrom(Stringendo,ppp)
 importFrom(biomaRt,getBM)
