bf convergence issue naming consistency nf partial paralellization

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -4,7 +4,7 @@ export(AddCustomScore)
 export(AddGOGeneList.manual)
 export(AddGOScore)
 export(AssignGranuleAverageScoresFromGOterm)
-export(Auto.GO.thresh)
+export(FindThresholdsAuto)
 export(AutoFindGranuleResolution)
 export(CalcClusterAverages_Gruffi)
 export(CalcStandDevSkewedDistr)
@@ -24,10 +24,10 @@ export(GrScoreHistogram)
 export(GrScoreUMAP)
 export(IntersectWithExpressed)
 export(PlotClustSizeDistr)
-export(PlotGoTermScores)
+export(CalculateAndPlotGoTermScores)
 export(PlotNormAndSkew)
 export(ReassignSmallClusters)
-export(Shiny.GO.thresh)
+export(FindThresholdsShiny)
 export(UMAP3Dcubes)
 importFrom(AnnotationDbi,Term)
 importFrom(AnnotationDbi,select)
