--- a/NAMESPACE
+++ b/NAMESPACE
@@ -13,6 +13,7 @@ export(CalcTranscriptomePercentageGO)
 export(CalculateAndPlotGoTermScores)
 export(CalculateMedianClusterSize)
 export(CleanDuplicateScorenames)
+export(ClearGruffi)
 export(ClusterUMAPthresholding)
 export(CustomScoreEvaluation)
 export(FeaturePlotSaveCustomScore)
@@ -26,6 +27,7 @@ export(GetGruffiClusteringName)
 export(GrScoreHistogram)
 export(GrScoreUMAP)
 export(IntersectWithExpressed)
+export(ParseGruffiGranuleScoreName)
 export(PlotClustSizeDistr)
 export(PlotNormAndSkew)
 export(ReassignSmallClusters)
