--- a/NAMESPACE
+++ b/NAMESPACE
@@ -31,6 +31,8 @@ export(ParseGruffiGranuleScoreName)
 export(PlotClustSizeDistr)
 export(PlotNormAndSkew)
 export(ReassignSmallClusters)
+export(StressBarplotPerCluster)
+export(StressUMAP)
 export(UMAP3Dcubes)
 importFrom(AnnotationDbi,Term)
 importFrom(AnnotationDbi,select)
@@ -86,6 +88,7 @@ importFrom(rgl,rglwidget)
 importFrom(rgl,shade3d)
 importFrom(rgl,translate3d)
 importFrom(rlang,sym)
+importFrom(scales,hue_pal)
 importFrom(shiny,runApp)
 importFrom(shiny,shinyApp)
 importFrom(sm,binning)
