--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,6 +36,7 @@ export(StressUMAP)
 export(UMAP3Dcubes)
 importFrom(AnnotationDbi,Term)
 importFrom(AnnotationDbi,select)
+importFrom(CodeAndRoll2,as.numeric.wNames.character)
 importFrom(CodeAndRoll2,grepv)
 importFrom(CodeAndRoll2,matrix.fromNames)
 importFrom(CodeAndRoll2,sem)
